# rlinks

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  Cargo.toml  LOOP_PROMPT.md  Makefile  NEXT_STEPS.md  PHASE_LEDGER.md  PROGRESS.md  PROJECT_CONTEXT.md  README.md  TASKS.md  index.html  loop.config.sh  loop.sh  style.css  website-prompt.md
.agent/: PLAN.md  WORKFLOW.md
.agent/prompts/: bootstrap.prompt.md
.opencode/agent/: ask.md  deep-researcher.md  docs.md  explore.md  fixer.md  git.md  implement.md  oracle-sisyphus.md  orchestrator.md  plan.md  review.md  security.md  terminal.md  test.md
.opencode/plugin/: inactivity-forcer.js
benchmarks/: README.md  analysis.py  run_all.sh  run_bh2.sh
benchmarks/harness/: Cargo.toml
benchmarks/harness/src/: main.rs
benchmarks/results/: append-100-1.json  env.json  kv-100-1.json  summary-agg.csv
crates/rlinks-bh2/: Cargo.toml
crates/rlinks-bh2/src/: lib.rs
crates/rlinks-bh2/tests/: cli.rs
crates/rlinks-cli/: Cargo.toml
crates/rlinks-cli/src/: integration_tests.rs  main.rs
crates/rlinks-core/: Cargo.toml
crates/rlinks-core/src/: lib.rs  redirect.rs
crates/rlinks-kv/: Cargo.toml
crates/rlinks-kv/src/: lib.rs
crates/rlinks-worker/: Cargo.toml
crates/rlinks-worker/src/: main.rs
docs/: DEVELOPMENT.md  GUIDELINES.md  INDEX.md  SPEC.md  architecture.md  failure-modes.md  operations.md  roadmap.md  schema.md  security.md
docs/DECISIONS/: worker-hit-logging.md
docs/benchmarks/: README.md  bh2.md  methodology.md  worker-hit-logging.md
