[package]
name = "rlinks-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rlinks-core = { path = "../rlinks-core" }
rlinks-kv = { path = "../rlinks-kv" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
