[package]
name = "rlinks-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
rlinks-core = { path = "../rlinks-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockall = "0.11"
